--- a/src/ui/app/style.scss
+++ b/src/ui/app/style.scss
@@ -130,6 +130,10 @@ td > button {
 	margin-right: .5em;
 }
 
+.dataTables_wrapper {
+	margin-top: 1em;
+}
+
 $font-size: 16px;
 $input-height: 2.5em; // at 16px, this an even 40px
 
